RESOLVED FIXED37669
REGRESSION: :visited doesn't work properly with pseudo elements and chained selectors
https://bugs.webkit.org/show_bug.cgi?id=37669
Summary REGRESSION: :visited doesn't work properly with pseudo elements and chained s...
Dave Hyatt
Reported 2010-04-15 13:41:12 PDT
Testcase: <style> span { display: block } a { display:block } :visited > span:first-letter { color:orange } </style> <body> <p>The H in the word hello below should be orange for a visited link.</p> <a href=""><span>Hello</span></a> Bug report: This happens in the latest nightly of Firefox also. I filed https://bugzilla.mozilla.org/show_bug.cgi?id=559612 for them.
Attachments
Patch (12.52 KB, patch)
2010-04-15 13:44 PDT, Dave Hyatt
andersca: review+
hyatt: commit-queue-
Dave Hyatt
Comment 1 2010-04-15 13:44:43 PDT
Anders Carlsson
Comment 2 2010-04-15 13:49:13 PDT
Comment on attachment 53469 [details] Patch r=me
Dave Hyatt
Comment 3 2010-04-15 13:56:33 PDT
Fixed in r57671. Once computedStyle can return pseudo elements I will land a test.
Note You need to log in before you can comment on or make changes to this bug.