WebCore/rendering/style/RenderStyle.h
@@ -110,6 +110,8 @@ class Pair;
 class StringImpl;
 class StyleImage;
 
+typedef Vector<RefPtr<RenderStyle>, 4> PseudoStyleCache;
+
 class RenderStyle: public RefCounted<RenderStyle> {
     friend class CSSStyleSelector;
 protected:
@@ -146,7 +148,7 @@ protected:
     DataRef<StyleInheritedData> inherited;
 
     // list of associated pseudo styles
-    RefPtr<RenderStyle> m_cachedPseudoStyle;
+    OwnPtr<PseudoStyleCache> m_cachedPseudoStyles;
 
 #if ENABLE(SVG)
     DataRef<SVGRenderStyle> m_svgStyle;
@@ -321,8 +323,7 @@ public:
     RenderStyle* getCachedPseudoStyle(PseudoId) const;
     RenderStyle* addCachedPseudoStyle(PassRefPtr<RenderStyle>);
 
-    typedef Vector<RenderStyle*, 10> PseudoStyleCache;
-    void getPseudoStyleCache(PseudoStyleCache&) const;
+    const PseudoStyleCache* cachedPseudoStyles() const { return m_cachedPseudoStyles.get(); }
 
     bool affectedByHoverRules() const { return noninherited_flags._affectedByHover; }
     bool affectedByActiveRules() const { return noninherited_flags._affectedByActive; }
